// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CModalBody customize 1`] = `
<div>
  <div
    class="modal-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalBody component 1`] = `
<div>
  <div
    class="modal-body"
  >
    Test
  </div>
</div>
`;
